python-utils.service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
  k8s-app: python-utils
  name: python-utils
  namespace: python-utils
spec:
  type: NodePort
  ports:
  - port: 8080
  selector:
  k8s-app: python-utils
