python-utils.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-utils
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      python-utils: web
  template:
    metadata:
      labels:
        python-utils: web
    spec:
      containers:
      - name: python-utils
        image: python-utils:latest
---
apiVersion: v1
kind: Service
metadata:
  name: python-utils-entrypoint
  namespace: default
spec:
  type: NodePort
  selector:
    bb: web
  ports:
  - port: 80
    targetPort: 9000
    nodePort: 30001
