service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyapp
  labels:
spec:
  ports:
  - port: 80
    targetPort: 9000
    protocol: TCP
    name: http
  selector:
    app: pyapp
