ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyapp-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dolfo.balto
  rules:
  - host: dolfo.balto
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pyapp-svc
            port:
              number: 80
