python-utils.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-utils-deployment
  labels:
    app: python-utils
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-utils
  template:
    metadata:
      labels:
        app: python-utils
    spec:
      containers:
        - name: python-utils
          image: baltox61/python-utils
          imagePullPolicy: Always
          ports:
            - containerPort: 8001

---
kind: Service
apiVersion: v1
metadata:
  name: python-service
spec:
  selector:
    app: python-utils
  ports:
  # Default port used by the image
  - port: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/dolfo"
        backend:
          service:
            name: python-service
            port:
              number: 8001
